# lsc-tuya-toolkit

./: .gitignore  README.md  build_ptzctl.sh
docker/: arm-builder.Dockerfile  build_binaries.sh
ptzlib/: CMakeLists.txt  Makefile  README.md
ptzlib/src/: ptz_cli.c  ptz_config.c  ptz_core.c  ptz_internal.h  ptz_log.c  ptz_motor.c  ptz_state.c  ptz_util.c  ptz_util.h  ptz_worker.c  ptzctl.h
sd_card/: TZ  _ak39_factory.ini  hack.sh  hostapd  shadow
sd_card/custom/configs/: _ht_hw_settings.ini  _ht_sw_settings.ini  factory_cfg.ini  hack.conf  onvif_simple_server.conf  ptz.conf  wifi.conf
sd_card/custom/scripts/: anyka_ipc.sh  dump_fs.sh  entrypoint.sh  ftp.sh  get_position  is_moving  offline.sh  onvif.sh  ptz_calibrate.sh  ptz_move  ptz_presets.sh  ptz_test.sh  ptz_tilt_probe.sh  recover_cfg.sh  sounds.sh  telnet.sh  wifi_apply.sh
